# Project-Ontos

./: .cursorrules  .cursorrules.bak  .gitattributes  .gitignore  .johnny-os.yaml  .ontos.toml  .pre-commit-config.yaml  20251124_Project Ontos The Manual.md  20251212_Ontos_Self_Development_Protocol_Implementation.md  AGENTS.md  AGENTS.md.bak  AGENT_INSTRUCTIONS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTEXT_MAP.md  CONTRIBUTING.md  DEPLOYMENT.md  LICENSE  MIGRATION_GUIDE.md  Ontos v2.3 Implementation Instructions.md  Ontos_Agent_Instructions.md  Ontos_CHANGELOG.md  Ontos_Context_Map.md  Ontos_Manual.md  POCHANGELOG.md  Phase1_Verification_Review.md  README.md  SECURITY.md  checksums.json  install.py  ontos.py  ontos_config.py  ontos_init.py  ontos_v2.1_implementation_plan.md  ontos_v2.2_implementation_plan_revised.md  ontos_v2.3_implementation_plan_final.md  pr_body.md  pr_comments.json  pr_v3.0.0_fix.md  (+13 more)
.agent/workflows/: github-release.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  gemini-dispatch.yml  gemini-review.yml  golden-master.yml  publish.yml
.llm-dev/: config.yaml  routes.yaml
.ontos/: environment.md
.ontos-internal/analysis/: Ontos-Strategic-Analysis-Codex.md  Ontos-Strategic-Analysis.md  Ontos-Technical-Architecture-Map-Codex.md  Ontos-Technical-Architecture-Map.md
.ontos-internal/atom/: architecture.md  schema.md  self_development_protocol.md  self_development_protocol_spec.md  v2_implementation_plan.md
.ontos-internal/kernel/: mission.md
.ontos-internal/logs/: 2025-12-12_configurable-workflow.md  2025-12-12_maintenance-v2-release.md  2025-12-12_pr10-review-and-fixes.md  2025-12-12_pr11-review-fixes.md  2025-12-12_v2-implementation-complete.md  2025-12-12_v2-planning.md  2025-12-13_context-map-notice.md  (+89 more)
.project-internal/: roadmap.md
Feedback from LLM/: 20251124_Antigravity response to Claude.md  20251124_Antigravity response to Claude_v3.md  20251124_ontos_foundation_issues_feedback_from_claude.md  20251124_ontos_foundation_issues_feedback_from_claude_v3.md
Ontos-docs/: Ontos Problem Statement.md  Product Requirement Document_ Ontos (v0.1 MVP).md
archive/: PR_RESPONSE.md
debug_bad_yaml/: .ontos.toml
docs/: _template.md  template.md
manifests/: project-ontos-audit-doctor-rce.yaml  project-ontos-audit-rebaseline-remediation.yaml  project-ontos-audit-remediation-registry.yaml  project-ontos-audit-serializer-corruption.yaml  project-ontos-audit-tail-bookkeeping.yaml  project-ontos-audit-tail-config-provenance.yaml  project-ontos-audit-tail-consistency.yaml  project-ontos-audit-tail-dead-code.yaml  project-ontos-audit-tail-docs.yaml  project-ontos-github-issues-115-117.yaml  project-ontos-issue-119-cli-activate-json-warning-metadata.yaml  project-ontos-issue-165-audit-registry.yaml  project-ontos-v4-7-1-hotfix.yaml  project-ontos-v44-agentic-activation-resilience.yaml  project-ontos-v5-0-0.yaml  project-ontos-v5-0-3-built-in-status-alias.yaml  project-ontos-v5-0-3-dependency-resolver.yaml  project-ontos-v5-0-3-log-paths.yaml  project-ontos-v5-0-3-required-version-preflight.yaml  project-ontos-v5-remediation-board-hygiene.yaml  project-ontos-v5-remediation-release-plan.yaml  v5-0-2-audit-tail.yaml
ontos/: __init__.py  __main__.py  cli.py  command_registry.py  doctor.py  groom.py  init.py
ontos.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: check_release_artifact.py  config.py  end_session.py  generate_context_map.py  llm-dev  migrate_frontmatter.py  release-smoke-requirements.txt  release_artifacts.py  remove_frontmatter.py  validate-audit-remediation-registry.py  verify_lifecycle_evidence_ref.py
tests/: conftest.py  mcp_helpers.py  test_audit_remediation_registry_validator.py  test_ci_release_workflows.py  test_cli.py  test_cli_contract_v4.py  test_cli_help.py  test_cli_phase4.py  test_config.py  test_consolidate.py  test_context_contention.py  test_cycle_detection.py  test_describes.py  test_doctor_mcp_probe_regression.py  test_document_loading_contract_a1.py  test_dual_mode.py  test_end_session.py  test_env_cli.py  test_frontmatter_parsing.py  test_frontmatter_roundtrip_regression.py  test_immutable_history.py  test_install.py  test_lib.py  test_lifecycle_evidence_ref.py  test_lint.py  test_maintain.py  test_map_compact.py  test_migrate_frontmatter.py  test_orphan_detection.py  test_pre_commit_check.py  test_pre_push_check.py  test_query.py  test_release_artifact.py  test_release_artifacts.py  test_session_context.py  test_suggestions.py  test_test_isolation.py  test_validation.py  test_validation_concepts_a1.py  test_version.py  (+1 more)
zz. Archive for Ontos/: README.md
(+1597 files in other folders)
