[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ontos"
version = "0.1.0"
description = "A local-first CLI tool for managing project context as a knowledge graph."
authors = [
  { name = "Jonathan Oh", email = "jonathanoh@example.com" },
]
dependencies = [
    "click",
    "pyyaml",
    "networkx",
    "pyperclip",
]
requires-python = ">=3.9"

[project.scripts]
ontos = "ontos.cli:cli"
