[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ontos"
version = "3.3.1"
description = "Local-first documentation management for AI-assisted development"
readme = "README.md"
requires-python = ">=3.9"
license = "Apache-2.0"
authors = [
    {name = "Ontos Project", email = "ohjonathan@users.noreply.github.com"}
]
keywords = ["documentation", "ai", "context", "llm", "developer-tools"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Documentation",
    "Topic :: Software Development :: Documentation",
]
dependencies = [
    "pyyaml>=6.0,<7.0",
    "tomli>=2.0.1,<3.0; python_version<'3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0,<9.0",
    "pytest-cov>=4.0,<6.0",
    "pre-commit>=3.0,<5.0",
]
[project.scripts]
ontos = "ontos.cli:main"

[project.urls]
Homepage = "https://github.com/ohjonathan/Project-Ontos"
Documentation = "https://github.com/ohjonathan/Project-Ontos/tree/main/docs"
Repository = "https://github.com/ohjonathan/Project-Ontos"
Issues = "https://github.com/ohjonathan/Project-Ontos/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["ontos", "ontos.*"]

[tool.setuptools.package-data]
"ontos._templates" = ["*"]
"ontos._hooks" = ["*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "legacy: tests for pre-v3.0 legacy script compatibility layer (.ontos/scripts/tests/)",
]

[tool.coverage.run]
source = ["ontos"]
omit = ["tests/*", ".ontos/scripts/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
